css/style.css
body {
    margin: 0;
    font-family: 'Fjalla One', sans-serif;
    overflow-x: hidden;
    background: black;
}

header {
    z-index: 5;
    transition: all 0.2s ease-in-out;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    height: 40px;

    position: fixed;
    left: 0;
    width: 100%;
}

header .navigation {
    top: 0;
}

header .navigation .navleft {
    transform: skew(-30deg);
    float: left;
    margin-left: -40px;
}

header .navigation .navright {
    transform: skew(30deg);
    float: right;
    margin-right: -20px;
}

header .navigation .tab {
    color: white;
    display: inline-block;
    width: 275px;
    height: 50px;

    margin-left: 20px;
    transition: all 0.2s ease-in-out;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;


}



header .navigation .tab h2 {
    padding-top: 10px;
    margin: 0;
    text-align: center;
    font-size: 1.3em;

}

header .navigation .navright .tab h2 {
    transform: skew(-30deg);
}

header .navigation .navleft .tab h2 {
    transform: skew(30deg);
}

header .navigation .tab.active {
    /* height: 100px; */
    /* background: red; */
    color: #E00000;
}

header .navigation .tab.active h2 {
    top: 60px;
}

header .navigation .tab#menu-tab:hover {
    background: white!important;
    color: black !important;
    opacity: 1 !important;
}

header .navigation .tab#preorder-tab:hover {
    background: white!important;
    color: black !important;
    opacity: 1 !important;
}

header .navigation .tab#about-tab:hover {
    background: white!important;
    color: black !important;
    opacity: 1 !important;
}

header .navigation .tab#contact-tab:hover {
    background: white!important;
    color: black !important;
    opacity: 1 !important;
}

header .navigation .tab.active:hover {
    color: #E00000 !important;
}


#logo {
    max-height: 75px;
    margin-left: auto;
    margin-right: auto;
    display: block;

    transition: all 0.2s ease-in-out;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    margin-top: 5px;
}

#logo:hover {
    opacity: 1 !important;
}


.background {
    z-index: -2; 
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover; 
    height: 70%;
    width: 100%;
    position: fixed;

}

.menubackground {
    background: url("../images/menubackground.jpg");
    background-position: center left;
}

.imageoverlay {
    z-index: -1;
    /* background: radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 1)); */
    /* background: linear-gradient(to bottom left, rgba(256, 256, 256, 0.9), 25%, rgba(256, 256, 256, 0)); */
    background: linear-gradient(rgba(0, 0, 0, 0.8), 25%, rgba(0, 0, 0, 0));
    height: 70%;
    width: 100%;
    position: fixed;
}

.shader {
    opacity: 0;
    background: rgba(0, 0, 0, .8);
    z-index: -1;
    height: 70%;
    position: fixed;
    width: 100%;
}

.videoContainer {
    position: fixed;
    width: 100%;
    height: 70%;
    overflow: hidden;
    z-index: -2;
}
.videoContainer video {
    min-width: 100%;
    min-height: 70%;
    position: relative;
    z-index: -2;
}
.videoContainer .videooverlay {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0px;
    left: 0px;
    z-index: -1;
    /* background: radial-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 1)); */
    background: linear-gradient(rgba(0, 0, 0, 0.8), 25%, rgba(0, 0, 0, 0));
}

.banner {
    z-index: -1;
    display: table;
    width: 100%;
    /* background: rgba(29,30,34, 0.7); */
    background: rgba(255,255,255, 0.7);
    height: 20%;
    top: 20%;
    color: black;
    position: fixed;
    text-align: center;

}

.banner .text {
    display: table-cell;
    vertical-align: middle;
    font-size: 5em;
}

.menu-container {
    z-index: -1;
    position: absolute;
    width: 100%;
    top: 70%;
    left: 0;
    /* height: 2000px; */
    /* background-color: #1d1e22; */
    background: black;
    /* box-shadow: 0 0 200px 200px #1d1e22; */

    transition: all 0.2s ease-in-out;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    padding-bottom: 5%;
}

.menu-container .menu-module {
    /* padding: 100px; */
    color: white;
    background: url("../images/textures/mosaic.png");
    background-repeat: repeat;
    width: 90%;
    z-index: 2;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: -50px;
    box-shadow: 0px 0px 10px 2px black;
    padding-top: 100px;
    padding-bottom: 100px;
}

.title {
    width: 50%;
    margin-right: auto;
    margin-left: auto;
    display: block;
    color: white;
    font-size: 5em;
    text-align: center;
    border-bottom: 1px solid white;
    /* visibility: hidden; */
    opacity: 0;

    transition: all 0.2s ease-in;
    -webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
}

.menu-container .menu-module h2 {
    margin-left: 100px;
    /* text-decoration: underline; */
    font-size: 3em;
}

.menu-container .menu-module p {
    margin-left: 100px;
    margin-right: 100px;
    overflow-x: hidden;
    font-size: 1.5em;
}

.menu-container .menu-module p:before {
    content: '.     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     .     ';
    width: 0;
    float: left;
    white-space: pre;
    margin-top: 15px;
    color: #e00000;
    font-size: .75em;
}

.menu-container .menu-module p span:first-child {
    padding-right: 0.33em;
}

.menu-container .menu-module p span + span {
    float: right;
    padding-left: 0.33em;
}

